Add workspaces for internal screen (laptop) A/B/C/D

--- a/roles/regolith/files/i3.config
+++ b/roles/regolith/files/i3.config
@@ -66,6 +66,10 @@ set_from_resource $ws16 i3-wm.workspace.16.name "16"
 set_from_resource $ws17 i3-wm.workspace.17.name "17"
 set_from_resource $ws18 i3-wm.workspace.18.name "18"
 #set_from_resource $ws19 i3-wm.workspace.19.name "19"
+set_from_resource $wsA i3-wm.workspace.A.name "A"
+set_from_resource $wsB i3-wm.workspace.B.name "B"
+set_from_resource $wsC i3-wm.workspace.C.name "C"
+set_from_resource $wsD i3-wm.workspace.D.name "D"
 
 set_from_resource $screen_left wjdp.screen_left "HDMI-A-0"
 set_from_resource $screen_right wjdp.screen_right "DisplayPort-1"
@@ -81,14 +85,19 @@ workspace "$ws6"  output $screen_left
 workspace "$ws7"  output $screen_left
 workspace "$ws8"  output $screen_left
 
-workspace "$ws11" output $screen_right $screen_internal
-workspace "$ws12" output $screen_right $screen_internal
-workspace "$ws13" output $screen_right $screen_internal
-workspace "$ws14" output $screen_right $screen_internal
-workspace "$ws15" output $screen_right $screen_internal
-workspace "$ws16" output $screen_right $screen_internal
-workspace "$ws17" output $screen_right $screen_internal
-workspace "$ws18" output $screen_right $screen_internal
+workspace "$ws11" output $screen_right
+workspace "$ws12" output $screen_right
+workspace "$ws13" output $screen_right
+workspace "$ws14" output $screen_right
+workspace "$ws15" output $screen_right
+workspace "$ws16" output $screen_right
+workspace "$ws17" output $screen_right
+workspace "$ws18" output $screen_right
+
+workspace $wsA output $screen_internal
+workspace $wsB output $screen_internal
+workspace $wsC output $screen_internal
+workspace $wsD output $screen_internal
 
 ###############################################################################
 # Launcher dialogs
