Fix wallpaper path

--- a/host_vars/dux.yml
+++ b/host_vars/dux.yml
@@ -1,7 +1,7 @@
 git_email: will@wjdp.uk
 git_signing_key: 4DC1AA6287F8CC4A
 
-wallpaper: $HOME/dotfiles/wallpapers/dennis-schweizer-18nR85wWyLY-unsplash
+wallpaper: ~/dotfiles/wallpapers/1440p/dennis-schweizer-18nR85wWyLY-unsplash.jpg
 
 screen_left: DP-4.8
 screen_right: DP-3
