--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -96,6 +96,10 @@ deb_packages:
   - pkg: steam-launcher
     url: https://steamcdn-a.akamaihd.net/client/installer/steam.deb
 
+bins:
+  - name: aws-vault
+    url: https://github.com/99designs/aws-vault/releases/download/v6.3.1/aws-vault-linux-amd64
+
 fish_paths:
   - "~/bin"
   - "~/dotfiles/bin"
