Add aws-sam-cli to python packages

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -185,6 +185,7 @@ nodejs_system_packages:
 pip_user_packages:
   - aws-shell
   - awscli
+  - aws-sam-cli
   - homeassistant-cli
   - icdiff
   - pre-commit
