Add firefox private window keybind

--- a/roles/regolith/files/i3.config
+++ b/roles/regolith/files/i3.config
@@ -108,6 +108,7 @@ bindsym $mod+Return exec /usr/bin/x-terminal-emulator
 
 ## Launch // Web Browser // <◇> c ##
 bindsym $mod+c exec gtk-launch $(xdg-settings get default-web-browser)
+bindsym $mod+Shift+c exec firefox --private-window
 
 ## Launch // File Browser // <◇> n ##
 set_from_resource $i3-wm.program.files i3-wm.program.files /usr/bin/nemo
@@ -303,11 +304,11 @@ bindsym $mod+q [con_id="__focused__"] kill
 bindsym $mod+Shift+q [con_id="__focused__"] exec --no-startup-id kill -9 $(xdotool getwindowfocus getwindowpid)
 
 ## Session // Reload i3 Config // <◇><Shift> c ##
-bindsym $mod+Shift+c reload
+bindsym $mod+Shift+r reload
 
 ## Session // Refresh Session // <◇><Shift> r ##
 set_from_resource $i3-wm.program.refresh_ui i3-wm.program.refresh_ui /usr/bin/regolith-look refresh
-bindsym $mod+Shift+r exec --no-startup-id $i3-wm.program.refresh_ui
+bindsym $mod+$alt+r exec --no-startup-id $i3-wm.program.refresh_ui
 
 ## Session // Restart i3 // <◇><Ctrl> r ##
 bindsym $mod+Ctrl+r restart
