Update dc fish abbr for compose v2

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -112,7 +112,7 @@ fish_paths:
 
 fish_abbr:
   - word: dc
-    expansion: docker-compose
+    expansion: docker compose
   - word: g
     expansion: git
   - word: gc
