--- a/roles/regolith/files/i3.config
+++ b/roles/regolith/files/i3.config
@@ -424,10 +424,10 @@ bindsym --whole-window --border $mod+button4 resize grow width 5 px or 5 ppt
 # HA
 ###
 
-bindsym $mod+Home exec $HOME/dotfiles/bin/hass service call scene.turn_on --arguments entity_id=scene.bedroom_day
-bindsym $mod+Prior exec $HOME/dotfiles/bin/hass service call scene.turn_on --arguments entity_id=scene.bedroom_evening_desk
-bindsym $mod+Next exec $HOME/dotfiles/bin/hass service call scene.turn_on --arguments entity_id=scene.bedroom_evening
-bindsym $mod+End exec $HOME/dotfiles/bin/hass service call scene.turn_on --arguments entity_id=scene.bedroom_off
+bindsym Mod1+Mod4+u exec $HOME/bin/hass service call scene.turn_on --arguments entity_id=scene.bedroom_day
+bindsym Mod1+Mod4+i exec $HOME/bin/hass service call scene.turn_on --arguments entity_id=scene.bedroom_evening_desk
+bindsym Mod1+Mod4+o exec $HOME/bin/hass service call scene.turn_on --arguments entity_id=scene.bedroom_evening
+bindsym Mod1+Mod4+semicolon exec $HOME/bin/hass service call scene.turn_on --arguments entity_id=scene.bedroom_off
 
 ###############################################################################
 # i3 Appearance and Behavior
