--- a/roles/regolith/files/i3.config
+++ b/roles/regolith/files/i3.config
@@ -611,6 +611,8 @@ for_window [class="Workrave"] floating enable
 for_window [class="jetbrains-toolbox"] floating enable
 for_window [class="1Password"] floating enable
 for_window [class="1password"] floating enable
+for_window [class="plexamp"] floating enable
+for_window [class="Plexamp"] floating enable
 
 ####
 # Workspace assignment
