--- a/roles/regolith/files/i3.config
+++ b/roles/regolith/files/i3.config
@@ -133,6 +133,9 @@ bindsym $mod+Ctrl+space exec $i3-wm.program.launcher.window
 set_from_resource $i3-wm.program.file_search i3-wm.program.file_search rofi -show find -modi find:/usr/share/rofi/modi/finder.sh
 bindsym $mod+$alt+space exec $i3-wm.program.file_search
 
+## Launch // Emojii Picker // <◇> U ##
+bindsym $mod+u exec /home/will/.local/bin/rofimoji -f emojis
+
 ## Launch // Help // <◇> ? ##
 set_from_resource $i3-wm.program.help i3-wm.program.help /usr/bin/remontoire-toggle
 bindsym $mod+question exec --no-startup-id $i3-wm.program.help
