Add ssh launcher

--- a/roles/regolith/files/i3.config
+++ b/roles/regolith/files/i3.config
@@ -133,6 +133,9 @@ bindsym $mod+Ctrl+space exec $i3-wm.program.launcher.window
 set_from_resource $i3-wm.program.file_search i3-wm.program.file_search rofi -show find -modi find:/usr/share/rofi/modi/finder.sh
 bindsym $mod+$alt+space exec $i3-wm.program.file_search
 
+## Launch // SSH // <◇> G ##
+bindsym $mod+g exec rofi -show ssh -theme $rofiTheme
+
 ## Launch // Emojii Picker // <◇> U ##
 bindsym $mod+u exec /home/will/.local/bin/rofimoji -f emojis
 
