--- a/roles/regolith/files/i3.config
+++ b/roles/regolith/files/i3.config
@@ -619,6 +619,7 @@ for_window [class="1Password"] floating enable
 for_window [class="1password"] floating enable
 for_window [class="plexamp"] floating enable
 for_window [class="Plexamp"] floating enable
+for_window [title="About Mozilla Firefox"] floating enable
 
 ####
 # Workspace assignment
