--- a/roles/regolith/files/i3.config
+++ b/roles/regolith/files/i3.config
@@ -620,6 +620,8 @@ for_window [class="1password"] floating enable
 for_window [class="plexamp"] floating enable
 for_window [class="Plexamp"] floating enable
 for_window [title="About Mozilla Firefox"] floating enable
+for_window [class="jetbrains-pycharm" title="win0"] floating enable
+for_window [title="Welcome to PyCharm"] floating enable
 
 ####
 # Workspace assignment
