Add workspace switch keys for A-D

--- a/roles/regolith/files/i3.config
+++ b/roles/regolith/files/i3.config
@@ -177,6 +177,11 @@ bindsym $mod+Ctrl+6 workspace number $ws16
 bindsym $mod+Ctrl+7 workspace number $ws17
 bindsym $mod+Ctrl+8 workspace number $ws18
 bindsym $mod+Ctrl+9 workspace number $ws19
+## Navigate // Workspace A-D // <◇><Ctrl><Alt> J,K,L,P ##
+bindsym $mod+$alt+Ctrl+j workspace $wsA
+bindsym $mod+$alt+Ctrl+k workspace $wsB
+bindsym $mod+$alt+Ctrl+l workspace $wsC
+bindsym $mod+$alt+Ctrl+p workspace $wsD
 
 ## Navigate // Next Workspace // <◇> Tab ##
 bindsym $mod+Tab workspace next_on_output
