Home/london scripts

--- a/roles/regolith/files/i3.config
+++ b/roles/regolith/files/i3.config
@@ -114,6 +114,10 @@ bindsym $mod+Shift+c exec firefox --private-window
 set_from_resource $i3-wm.program.files i3-wm.program.files /usr/bin/nemo
 bindsym $mod+n exec $i3-wm.program.files
 
+## Launch // Password Manager // <◇> j ##
+set_from_resource $i3-wm.program.password i3-wm.program.password
+bindsym $mod+j exec $i3-wm.program.password
+
 set_from_resource $rofiTheme rofi.theme /etc/regolith/styles/cahuella/rofi.rasi
 
 ## Launch // Application // <◇> Space ##
