--- a/local.yml
+++ b/local.yml
@@ -9,7 +9,7 @@
     - { role: fish, tags: ["fish"] }
     - { role: fonts, tags: ["fonts"] }
     - { role: gnome, tags: ["gnome"] }
-    - { role: regolith, tags: ["regolith"] }
+    - { role: regolith }
     - { role: git, tags: ["git"] }
     - { role: python, tags: ["python"] }
     - { role: node, tags: ["node"] }
