Add webcam floating window helper

--- a/roles/regolith/files/i3.config
+++ b/roles/regolith/files/i3.config
@@ -631,6 +631,7 @@ for_window [class="Plexamp"] floating enable
 for_window [title="About Mozilla Firefox"] floating enable
 for_window [class="jetbrains-pycharm" title="win0"] floating enable
 for_window [title="Welcome to PyCharm"] floating enable
+for_window [class="MPlayer"] floating enable
 
 ####
 # Workspace assignment
