--- a/roles/python/tasks/main.yml
+++ b/roles/python/tasks/main.yml
@@ -5,8 +5,13 @@
       - python3
       - python3-pip
       - python3-dev
+      - python3.8
+      - python3.8-dev
       - python3.9
       - python3.9-dev
+      - python3.10
+      - python3.10-dev
+      - python-is-python3
     state: present
 
 - name: Check if poetry is installed
