Add some window rules

--- a/roles/regolith/files/i3.config
+++ b/roles/regolith/files/i3.config
@@ -639,8 +639,12 @@ for_window [class="MPlayer"] floating enable
 
 assign [class="jetbrains-pycharm"] "$ws1"
 for_window [class="jetbrains-pycharm"] move to workspace "$ws1"
-
 assign [class="Slack"] "$ws18"
 assign [class="Mumble"] "$ws18"
 assign [class="Spotify"] "$ws17"
 assign [class="zoom"] "$ws15"
+
+
+# Borders
+for_window [class="obsidian"] border pixel 1
+for_window [class="firefox"] border pixel 1
