--- a/local.yml
+++ b/local.yml
@@ -5,7 +5,7 @@
     - { role: bin, tags: ["bin"] }
     - { role: linux, tags: ["linux"] }
     - { role: python, tags: ["python"] }
-    # - { role: dotfiles, tags: ["dotfiles"] }
+    - { role: dotfiles, tags: ["dotfiles"] }
     - { role: autofs, tags: ["autofs"] }
     - { role: fish, tags: ["fish"] }
     - { role: fonts, tags: ["fonts"] }
