Cleanup group_vars/all.yml, mostly packages

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -1,5 +1,5 @@
 dotfiles_user_home: "{{ '~' | expanduser }}"
-dotfiles_home: "{{dotfiles_user_home}}/dotfiles"
+dotfiles_home: "{{ dotfiles_user_home }}/dotfiles"
 
 user: will
 full_name: Will Pimblett
@@ -26,20 +26,16 @@ apt_repos:
     repo: ppa:libreoffice/ppa
 
 apt_packages:
-  # - arandr
   - audacity
   - baobab
   - build-essential
-  # - chromium-browser
+  - chromium-browser
   - code
   - curl
   - dconf-editor
-  # - default-jre
-  # - feh
   - flameshot
   - fonts-noto
   - gimp
-  # - gnupg2
   - gpick
   - htop
   - httpie
@@ -48,9 +44,8 @@ apt_packages:
   - iperf
   - libjpeg-dev
   - libpq-dev
-  # - libreoffice
+  - libreoffice
   - libxslt1-dev
-  # - lxappearance
   - meld
   - mpv
   - ncdu
@@ -64,30 +59,25 @@ apt_packages:
   - playerctl
   - powertop
   - pwgen
-  # - ruby
-  # - ruby-dev
   - screen
-  - screenruler
-  # - software-properties-common
+  - software-properties-common
   - spotify-client
   - sshfs
   - sudo
   - syncthing
   - tailscale
   - tmux
-  # - units
+  - units
   - unrar
   - vim
   - vlc
   - wget
   - whois
   - wine
-  # - xautomation
-  # - xdotool
   - zbar-tools
   - speedcrunch
   - libfuse2 # Needed for AppImages
-  - wdisplays
+  - wdisplays # arandr but for wayland
 
 deb_packages:
   - pkg: bat
@@ -104,9 +94,6 @@ deb_packages:
     version: "0.20.1"
   - pkg: steam-launcher
     url: https://steamcdn-a.akamaihd.net/client/installer/steam.deb
-  # - pkg: dug
-  #   url: https://github.com/unfrl/dug/releases/download/0.0.85/dug.0.0.85.linux-x64.deb
-  #   version: "0.0.85"
 
 bins:
   - name: aws-vault
