--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -98,6 +98,9 @@ deb_packages:
 bins:
   - name: aws-vault
     url: https://github.com/99designs/aws-vault/releases/download/v6.6.2/aws-vault-linux-amd64
+  - name: difft
+    url: https://github.com/Wilfred/difftastic/releases/download/0.43.1/difft-x86_64-unknown-linux-gnu.tar.gz
+    archive: true
 
 fish_paths:
   - "~/bin"
