--- a/local.yml
+++ b/local.yml
@@ -25,3 +25,4 @@
       GOPATH: /home/will/go
       become: yes
     - { role: blackd, tags: ["blackd"] }
+    - { role: syncthing, tags: ["syncthing"] }
