--- a/roles/blackd/tasks/main.yml
+++ b/roles/blackd/tasks/main.yml
@@ -3,6 +3,11 @@
     name: black[d]
     state: present
 
+- name: Ensure ~/.config/systemd/user/ exists
+  file:
+    path: "{{ dotfiles_user_home }}/.config/systemd/user/"
+    state: directory
+
 - name: Link blackd service file
   file:
     src: "{{ dotfiles_home }}/roles/blackd/files/blackd.service"
