Add mako for notifications

--- a/roles/sway/tasks/main.yml
+++ b/roles/sway/tasks/main.yml
@@ -54,6 +54,19 @@
     state: link
     force: yes
 
+- name: Ensure mako config directory exists
+  file:
+    path: "{{ dotfiles_user_home }}/.config/mako"
+    state: directory
+    mode: 0775
+
+- name: Link mako config
+  file:
+    src: "{{ dotfiles_home }}/roles/sway/files/mako"
+    dest: "{{ dotfiles_user_home }}/.config/mako/config"
+    state: link
+    force: yes
+
 - name: Update output config
   template:
     src: "outputs.j2"
