--- a/local.yml
+++ b/local.yml
@@ -26,3 +26,4 @@
       become: yes
     - { role: blackd, tags: ["blackd"] }
     - { role: syncthing, tags: ["syncthing"] }
+    - { role: wayland-tweaks, tags: ["wayland-tweaks"] }
