Add pandoc to list of installed packages

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -75,6 +75,7 @@ apt_packages:
   - speedcrunch
   - libfuse2 # Needed for AppImages
   - wdisplays # arandr but for wayland
+  - pandoc # Needed for Obsidian pandoc export
 
 deb_packages:
   - pkg: bat
