--- a/roles/apt/tasks/deb.yml
+++ b/roles/apt/tasks/deb.yml
@@ -1,7 +1,7 @@
 - name: Run misc tasks
   include_tasks: misc.yml
 
-- name: Check if {{ item.pkg }} is installed
+- name: Check if {{ item.pkg }} {{ item.version }} is installed
   set_fact:
     package_installed: "{{ item.pkg in ansible_facts.packages }}"
 
@@ -10,7 +10,7 @@
     package_version: "{{ ansible_facts.packages[item.pkg][0].version }}"
   when: package_installed and item.version is defined
 
-- name: Decide if we should install {{ item.pkg }}
+- name: Decide if we should install {{ item.pkg }} {{ item.version }}
   set_fact:
     should_install: >-
       {{ 
@@ -24,13 +24,13 @@
         ) 
       }}
 
-- name: "Download {{ item.pkg }} deb file"
+- name: "Download {{ item.pkg }} {{ item.version }} deb file"
   when: should_install
   get_url:
     url: "{{ item.url }}"
-    dest: "/tmp/{{ item.pkg }}.deb"
+    dest: "/tmp/{{ item.pkg }}-{{ item.version }}.deb"
 
-- name: "Install {{ item.pkg }}"
+- name: "Install {{ item.pkg }} {{ item.version }}"
   when: should_install
   become: yes
-  command: dpkg -i "/tmp/{{ item.pkg }}.deb"
+  command: dpkg -i "/tmp/{{ item.pkg }}-{{ item.version }}.deb"
