--- a/roles/bin/tasks/main.yml
+++ b/roles/bin/tasks/main.yml
@@ -1,3 +1,8 @@
+- name: Ensure bin directory exists
+  file:
+    path: "{{ dotfiles_user_home }}/bin"
+    state: directory
+
 - name: Install bins
   loop: "{{ bins }}"
   include_tasks: bin.yml
