--- a/roles/apt/tasks/deb.yml
+++ b/roles/apt/tasks/deb.yml
@@ -1,16 +1,16 @@
 - name: Run misc tasks
   include_tasks: misc.yml
 
-- name: Check if {{ item.pkg }} {{ item.version }} is installed
+- name: "Check if {{ item.pkg }} {{ item.version }} is installed"
   set_fact:
     package_installed: "{{ item.pkg in ansible_facts.packages }}"
 
-- name: Get installed {{ item.pkg }} version
+- name: "Get installed {{ item.pkg }} version"
   set_fact:
     package_version: "{{ ansible_facts.packages[item.pkg][0].version }}"
   when: package_installed and item.version is defined
 
-- name: Decide if we should install {{ item.pkg }} {{ item.version }}
+- name: "Decide if we should install {{ item.pkg }} {{ item.version }}"
   set_fact:
     should_install: >-
       {{ 
