--- a/roles/sway/files/workstyle.toml
+++ b/roles/sway/files/workstyle.toml
@@ -11,7 +11,7 @@
 
 "alacritty" = ""
 "github" = ""
-"rust" = ""
+"gitlab" = ""
 "google" = ""
 "private browsing" = ""
 "firefox" = ""
@@ -52,6 +52,7 @@
 "obsidian"="💎"
 "printer"=""
 "steam"=""
+"slack"=""
 [other]
 fallback_icon = "🤨"
-deduplicate_icons = true
+deduplicate_icons = false
