Update various workstyle icons

--- a/roles/sway/files/workstyle.toml
+++ b/roles/sway/files/workstyle.toml
@@ -10,11 +10,17 @@
 # precedence is given in order of apparition in this file.
 
 "alacritty" = ""
+"home assistant"="󰟐"
 "github" = ""
 "gitlab" = ""
 "google" = ""
+"jira"="󰌃"
+"reddit"=""
+"youtube"=""
+"plex"="󰚺"
+"datadog"="󰩄"
 "private browsing" = ""
-"firefox" = ""
+"firefox" = "󰈹"
 "chrome" = ""
 "file manager" = ""
 "libreoffice calc" = ""
@@ -31,6 +37,7 @@
 "disk usage" = ""
 ".pdf" = ""
 "spotify" = ""
+"psst-gui" = ""
 "foot" = ""
 "gnome-terminal-server"=""
 "sublime_text" = ""
@@ -40,19 +47,20 @@
 "nemo" = ""
 "file-roller" = "遲"
 "sublime_merge" = ""
-"jetbrains-pycharm" = ""
+"jetbrains-pycharm" = ""
 "eog" = ""
 "software" = ""
 "gnome-power-statistics"=""
 "audacity"=""
 "gimp"=""
 "inkscape"=""
-"plex"=""
 "youtube"=""
 "obsidian"="💎"
 "printer"=""
 "steam"=""
 "slack"=""
+"subsurface"="󰷄"
+
 [other]
 fallback_icon = "🤨"
 deduplicate_icons = false
