Even more tweaks to workstyle

--- a/roles/sway/files/workstyle.toml
+++ b/roles/sway/files/workstyle.toml
@@ -11,57 +11,60 @@
 
 "alacritty" = ""
 "home assistant"="󰟐"
-"github" = ""
-"gitlab" = ""
-"google" = ""
+"chrome" = ""
+"github" = ""
+"gitlab" = "󰮠"
+"google" = "󰊭"
 "jira"="󰌃"
-"reddit"=""
-"youtube"=""
+"reddit"="󰑍"
+"youtube"="󰗃"
 "plex"="󰚺"
 "datadog"="󰩄"
-"private browsing" = ""
+"private browsing" = "󰗹"
 "firefox" = "󰈹"
-"chrome" = ""
-"file manager" = ""
 "libreoffice calc" = ""
 "libreoffice writer" = ""
 "libreoffice" = ""
 "vim" = ""
-"gthumb" = ""
 "menu" = ""
-"calculator" = ""
-"transmission" = ""
+"calculator" = "󰃬"
+"speedcrunch" = "󰃬"
 "videostream" = ""
 "mpv" = ""
 "music" = ""
 "disk usage" = ""
-".pdf" = ""
-"spotify" = ""
-"psst-gui" = ""
+".pdf" = ""
+"spotify" = "󰓇"
+"psst-gui" = "󰓇"
 "foot" = ""
-"gnome-terminal-server"=""
+"gnome-terminal-server"="󰆍"
 "sublime_text" = ""
-"pavucontrol" = ""
+"pavucontrol" = "󰕾"
 "ulauncher" = "▼"
-"code" = ""
-"nemo" = ""
-"file-roller" = "遲"
+"code" = "󰨞"
+"nemo" = "󰉋"
+"file-roller" = "󰀼"
 "sublime_merge" = ""
-"jetbrains-pycharm" = ""
-"eog" = ""
+"jetbrains-pycharm" = "󰌠"
+"eog" = "󰋩"
+"nomacs" = "󰋩"
 "software" = ""
-"gnome-power-statistics"=""
+"gnome-power-statistics"="󰁾"
 "audacity"=""
-"gimp"=""
-"inkscape"=""
+"gimp"=""
+"inkscape"="󰀁"
 "youtube"=""
-"obsidian"="💎"
-"printer"=""
-"steam"=""
-"slack"=""
+"obsidian"="󰮋"
+"printer"="󰐪"
+"steam"="󰓓"
+"slack"="󰒱"
 "subsurface"="󰷄"
 "meld"="󰽜"
 "seahorse"="󱕴"
+"gedit"="󰭸"
+"virtual machine"="󰒋"
+"qemu"="󱄄"
+"csv"=""
 
 [other]
 fallback_icon = "🤨"
