More workstyle icons

--- a/roles/sway/files/workstyle.toml
+++ b/roles/sway/files/workstyle.toml
@@ -20,6 +20,9 @@
 "youtube"="󰗃"
 "plex"="󰚺"
 "datadog"="󰩄"
+"meet"="󰻒"
+"calendar"="󰃭"
+"hacker news"=""
 "private browsing" = "󰗹"
 "firefox" = "󰈹"
 "libreoffice calc" = ""
